# myhermes-backup

./: .gitignore  .npmrc  docker-compose.yml
hermes_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openclaw-guide-extension/: README.md  manifest.json
openclaw-guide-extension/_locales/en/: messages.json
openclaw-guide-extension/scripts/: background.js  content.js  knowledge-base.js  sidebar.js
openclaw-guide-extension/sidebar/: index.html
openclaw-guide-extension/styles/: content.css  sidebar.css
tinker-atropos/: .gitignore  .pre-commit-config.yaml  README.md  launch_training.py  pyproject.toml
tinker-atropos/configs/: default.yaml  quick_test.yaml  usage.md
tinker-atropos/tinker_atropos/: config.py  trainer.py  types.py
tinker-atropos/tinker_atropos/environments/: gsm8k_tinker.py
tinker-atropos/tinker_atropos/tests/: test_logprob_alignment.py  test_managed_server.py
tinker-atropos/tinker_atropos/utils/: download_weights.py
